--- a/index.html
+++ b/index.html
@@ -5,81 +5,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* Basic Reset */
+        *, *::before, *::after {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
-			overflow: auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-
         }
-		.header {
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            overflow: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 20px;
-            background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        .header {
             width: 100%;
             max-width: 1900px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             margin-bottom: 20px;
         }
+
         .logo {
-            width: 150px; /* Adjust width of the logo */
-            height: auto; /* Maintain aspect ratio */
+            width: 150px;
+            height: auto;
         }
+
         .heading {
             font-size: 2em;
             color: #333;
             margin: 10px 0;
         }
+
         .gallery-container {
             width: 90%;
-            max-width: 1200px;
+            max-width: 1900px;
             margin: auto;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
         .gallery {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            padding: 10px;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px; /* Further reduced gap between images */
+            width: 100%;
+            max-width: 1900px;
         }
+
         .gallery-item {
             position: relative;
             overflow: hidden;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Reduced shadow for tighter look */
             background: white;
             transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .gallery-item img {
             width: 100%;
-            height: auto;
-            display: block;
+            height: 673.6px; /* Consistent height */
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
+
+        .gallery-item img {
+            width: 100%;         /* Ensure the image fills the container */
+            height: auto;        /* Maintain aspect ratio */
+            max-height: 100%;    /* Ensure the image doesn't exceed container height */
+            object-fit: contain; /* Ensure the image fits within the container without getting cut off */
+        }
+
         .gallery-item:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            transform: scale(1.03); /* Slightly smaller scale effect */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adjust shadow */
         }
+
         .caption {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            padding: 10px;
+            padding: 5px; /* Reduced padding */
             background: rgba(0, 0, 0, 0.6);
             color: white;
             text-align: center;
-            font-size: 1em;
+            font-size: 0.9em; /* Slightly smaller font size */
             font-weight: bold;
-            border-top: 2px solid #fff;
+            border-top: 1px solid #fff; /* Adjust border size */
             box-sizing: border-box;
         }
-		
     </style>
 </head>
 <body>
@@ -98,6 +119,8 @@
                 <img src="Raw Tank Hardness Report.png" alt="Image 2">
 			</div>
 		</div>
+	</div>
+	<div class="gallery-container">
 		<div class="gallery">
 			<div class="gallery-item">
                 <img src="DG200 Units Consumed.png" alt="Image 1">
@@ -108,6 +131,8 @@
                 
             </div>
 		</div>
+	</div>
+	<div class="gallery-container">
 		<div class="gallery">
 			<div class="gallery-item">
                 <img src="Cauvery Water Received.png" alt="Image 1">
