Updated Index html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							datasets: [{
 								label: column, // Use column name as label
 								data: values,
-								borderColor: 'rgba(255, 99, 132, 0.2)',
+								borderColor: 'rgba(39,50,245,1)',
 								backgroundColor: 'rgba(75, 192, 192, 0.2)',
 								fill: true,
 							}]
